# OpenPodCar_V2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dockerfile
INBLincoln_3DMap/: model.sdf
launch/: ackermann.launch.py  launch.xml
myplugin/: CMakeLists.txt  package.xml
myplugin/src/: myplugin.cpp
pod2_bringup/: CMakeLists.txt  package.xml
pod2_bringup/ROS2_R4_nodes/: Podcar_Steer_node.py  Podcar_motor_driver.py  R4_Publisher.py  R4_Receiver.py
pod2_bringup/config/: ekf.yaml  ekf_sim.yaml  generic_gamepad.yaml  joy.yaml  twist_mux_locks.yaml
pod2_bringup/launch/: ekf.launch.py  generic_gamepad.launch.py  joy.launch.py  rviz2.launch.xml  teleop.launch.xml
pod2_bringup/pod2_bringup/: CMakeLists.txt  package.xml
pod2_bringup/pod2_bringup/config/: joy.yaml
pod2_bringup/pod2_bringup/launch/: Joy_twist.launch.py  joy.launch.py
pod2_bringup/pod2_bringup/scripts/: teleop.py
pod2_bringup/scripts/: Config.py  Odometry_publisher.py  Podcar_Steer_node.py  Podcar_motor_driver.py  cmd_velHandler.py  joystick2speedms.py  joystick2wheelAngle.py  odometry_handler.py  simple_pub.py  supportFunctions.py  tf_broadcaster.py
pod2_cartographer/: package.xml
pod2_cartographer/config/: pod2_lds_2d.lua
pod2_cartographer/launch/: pod2_cartographer.launch.py
pod2_description/: CMakeLists.txt  package.xml
pod2_description/ROS2_Sim_Nodes/: RGBD_wall_timer.py  camera_info_modifier.py  fixed_sim_twist.py
pod2_description/ROS2_Time_Nodes/: Depth_image_2_real.py  RGBD_wall_timer.py  odometry_wall_time.py  testing_tf.py  transform_broadcaster.py
pod2_description/config/: steering_controller.yaml
pod2_description/launch/: Lincoln_world.launch.py  ackermann.launch.py  description.launch.py  pod2_description.launch.py  podcar_sim2real.launch.py
pod2_description/meshes/: wheel1.dae
pod2_description/rviz2/: description.rviz
pod2_description/xacro/: OPenpodcar_gametheory.urdf  OpenPodCar_V2_Depth.urdf  OpenPodcar_v2.urdf  ackermann.sdf  axle.urdf  model.sdf  sample.sdf  sample.urdf  sample_velodyne.urdf  tested.urdf
pod2_gazebo/: package.xml
pod2_gazebo/launch/: pod2_gazebo.launch.py
pod2_gazebo/models/podcar/: model.sdf
pod2_gazebo/xacro/: body.urdf.xacro  podcar.sdf  podcar.urdf.xacro  sample.urdf
pod2_navigation/: package.xml
pod2_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml  nav_params_test.yaml  podcar_sim2real.yaml  testing_nav.yaml
pod2_navigation/launch/: async_slam.launch.py  localization.launch.py  map_server.launch.py  nav2_launch.py  nav_testing.launch.py  navigation.launch.py  slam_map_building.launch.py
pod2_navigation/maps/: Tight_env.pgm  Tight_env_slam.data  demo_map_save.yaml  empty_map.yaml  map.pgm  test_map.pgm
pod2_navigation/rviz2/: OpenPodCar.rviz  podcar.rviz
pod2_rtabmap/launch/: rtabmap_slam.launch.py
pod2_sensor_tools/: CMakeLists.txt  package.xml
pod2_sensor_tools/config/: param.yaml
pod2_sensor_tools/launch/: depthimage_to_laserscan.launch.py  point_to_scan.launch.py  rtabmap.launch.py
pod2_sensor_tools/scripts/: Optical_Flow_node.py
pod2_yolo/: setup.cfg  setup.py
pod2_yolo/pod2_yolo/: yolov8_ros2_subscriber.py
podcar_2/: frames_2023-04-13_13.32.28.gv  frames_2023-05-12_11.43.51.gv
podcar_2/src/pod2_bringup/: CMakeLists.txt  package.xml
podcar_2/src/pod2_description/: CMakeLists.txt
podcar_2/src/pod2_gazebo/: CMakeLists.txt  package.xml
podcar_2/src/pod2_navigation/: CMakeLists.txt  package.xml
podcar_2/src/pod2_sensor_tools/: CMakeLists.txt  package.xml
rviz2/: description.rviz
scripts/: testing_tf.py  transform_broadcaster.py
src/pod2_bringup/: package.xml
src/pod2_bringup/ROS2_R4_nodes/: Podcar_Steer_node.py  Podcar_motor_driver.py  R4-Websockets-Client.py
src/pod2_bringup/config/: ekf.yaml  generic_gamepad.yaml  joy.yaml  twist_mux_topics.yaml
src/pod2_bringup/launch/: OpenPodcar2_sim_bringup.launch.py  R4_ros.launch.py  generic_gamepad.launch.py  joy.launch.py  twist_mux.launch.py
src/pod2_cartographer/: CMakeLists.txt  package.xml
src/pod2_description/: CMakeLists.txt  package.xml
src/pod2_description/ROS2_Sim_Nodes/: camera_info_modifier.py  fixed_sim_twist.py  laser_sim2real.py  odometry_wall_time.py
src/pod2_description/ROS2_Time_Nodes/: RGBD_wall_timer.py  odometry_wall_time.py  real_time.py
src/pod2_description/launch/: OpenPodCar.launch.py  description.launch.py  pod2_description.launch.py  pod2_gz_sim.launch.py  podcar_sim2real.launch.py
src/pod2_description/meshes/: podcarv3.dae  wheel.dae  wheel1.STL
src/pod2_description/xacro/: OPenpodcar_gametheory.urdf  OpenPodCar_V2_Depth.urdf  OpenPodcar_V2_Lidar.urdf  Openpodcar.urdf  Openpodcar_gametheory.urdf  empty.sdf
src/pod2_msgs/: CMakeLists.txt  package.xml
src/pod2_msgs/msg/: GameInfo.msg
src/pod2_navigation/: CMakeLists.txt  package.xml
src/pod2_navigation/behavior_trees/: default.xml
src/pod2_navigation/config/: mapper_params_online_async.yaml  nav2_dwb_smac.yaml  nav2_dwb_smac_sim.yaml  nav2_game_theory.yaml  nav2_mppi_smac_test.yaml.orig  nav2_rpp_smac.yaml  nav_params_test.yaml  podcar_sim2real.yaml
src/pod2_navigation/launch/: OpenPodCar_NAV2.launch.py  OpenPodCar_NAV2_sim.launch.py  async_slam.launch.py  localization.launch.py  nav2_sim.launch.py
src/pod2_navigation/maps/: INB_1st_FLOOR.pgm  INB_1st_FLOOR.yaml  INB_Ground_floor_outdoor.yaml  IND_Ground_floor_outdoor.pgm  Map_for_game_theory_test.pgm  Map_for_game_theory_test.yaml  Sim_2.yaml  Sim_3.yaml  empty_map.pgm
src/pod2_rtabmap/: package.xml
src/pod2_rtabmap/launch/: rtabmap_sim.launch.py  rtabmap_slam.launch.py
src/pod2_sensor_tools/: CMakeLists.txt  package.xml
src/pod2_sensor_tools/config/: realsense_params.yaml
src/pod2_sensor_tools/launch/: optical_flow.launch.py  point_to_scan.launch.py  realsense_d435.launch.py  rtabmap_sim.launch.py  rtabmap_slam.launch.py
src/pod2_sensor_tools/scripts/: Optical_Flow_node.py
src/pod2_yolo/: package.xml
src/pod2_yolo/pod2_yolo/: model_input_node.py  yolov8_ros2_pt.py
src/temp_pod2_rtabmap/: CMakeLists.txt
(+26 files in other folders)
