<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pod2_navigation</name>
  <version>0.0.0</version>
  <description>pod2_navigation package is built on top of the NAV2 stack for ROS2. This consist of configuration file for various sub-packages ; planner server
  controller_servr, bt_navigator, behaviour_server, nav2_waypoint_follower, costmaps2D, AMCL. These parameters has been tuned for the specific PodCar NAV2 setup.
  The package also provides the localization using slam_toolbox in asynchronous mode. The parameter file has been referenced from the official slam_toolbox guide.</description>
  <maintainer email="27339244@students.lincoln.ac.uk"></maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>nav2_bringup</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
  </export>
</package>
