<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pod2_bringup</name>
  <version>0.0.0</version>
  <description>Pod2 bringup package providing execuatbels to navigation package</description>
  <maintainer email="rakshitnar12@gmail.com">rakshit</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
 <!-- ROS2 built tool dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pod2_description</exec_depend>
<!-- ROS2 Interfaces dependencies-->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>

<!-- ROS2 packages dependencies-->
  
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  
  
  <!-- <exec_depend>nav2_waypoint_follower</exec_depend> -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
